--- a/Report/results.tex
+++ b/Report/results.tex
@@ -211,7 +211,7 @@ The pretrained SimCLR backbone was integrated with YOLOv12 for object detection 
 
 DINOv3 features demonstrated strong clustering properties even without any fine-tuning on the target dataset.
 
-\begin{figure}[H]
+\begin{figure}[htbp]
     \centering
     \begin{subfigure}[b]{0.48\textwidth}
         \includegraphics[width=\textwidth]{assignment2/dinov3/dinov3_tsne_visualization.png}
@@ -230,7 +230,7 @@ DINOv3 features demonstrated strong clustering properties even without any fine-
 
 Table \ref{tab:dino_classifiers} compares different classifier architectures on DINOv3 features.
 
-\begin{table}[H]
+\begin{table}[htbp]
 \centering
 \caption{DINOv3 Classification with Different Classifiers}
 \label{tab:dino_classifiers}
@@ -245,7 +245,7 @@ k-NN ($k=5$) & 82.67\% & -- & -- & -- \\
 \end{tabular}
 \end{table}
 
-\begin{figure}[H]
+\begin{figure}[htbp]
     \centering
     \includegraphics[width=0.65\textwidth]{assignment2/dinov3/dinov3_accuracy_comparison.png}
     \caption{Accuracy comparison across different classifier types using DINOv3 frozen features.}
@@ -254,7 +254,7 @@ k-NN ($k=5$) & 82.67\% & -- & -- & -- \\
 
 \paragraph{MLP Training Curves}
 
-\begin{figure}[H]
+\begin{figure}[htbp]
     \centering
     \includegraphics[width=0.75\textwidth]{assignment2/dinov3/dinov3_mlp_training_curves.png}
     \caption{Training and validation curves for the MLP classifier on DINOv3 features, showing stable convergence.}
@@ -263,7 +263,7 @@ k-NN ($k=5$) & 82.67\% & -- & -- & -- \\
 
 \paragraph{Classification Confusion Matrix}
 
-\begin{figure}[H]
+\begin{figure}[htbp]
     \centering
     \includegraphics[width=0.55\textwidth]{assignment2/dinov3/dinov3_confusion_matrices.png}
     \caption{Confusion matrix for DINOv3 + MLP classification showing high accuracy across all classes.}
